--- a/week1.html
+++ b/week1.html
@@ -8,7 +8,7 @@
 
 <body>
 	<header>
-		<h1> Your Name </h1>
+		<h1>kx717-9</h1>
 		<nav>
 		
 			<a href="espn.com"> About </a>
@@ -20,7 +20,7 @@
 
 	<section id="About">
 		<h2>About me</h2>
-		<p>Nothing lasts forever even cold november rain</p>
+		<p>My name is Ankit Kc. I am good citizen of Nepal.</p>
 	</section>
 
 
